# ska-mid-cbf-int-tests

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CHANGELOG.rst  CODEOWNERS  Makefile  README.md  pyproject.toml  pytest.ini
.gitlab/ci/: common.gitlab-ci.yml  mid-itf.gitlab-ci.yml  psi-mid.gitlab-ci.yml
charts/ska-mid-cbf-int-tests/: Chart.yaml  values.yaml
charts/ska-mid-cbf-int-tests/resources/: dish_packet_capture_itf.yaml  dish_packet_capture_psi.yaml  visibilities_pod_itf.yaml  visibilities_pod_psi.yaml
charts/ska-mid-cbf-int-tests/templates/: Deployment.yaml  dependencies.yaml
docs/: Makefile
docs/src/: conf.py  index.rst
docs/src/cbf_command/: cbf_command.rst
docs/src/test_lib/: test_packages.rst
notebooks/prototyping/: IT0_mcs_setup.ipynb  it0_mcs_setup.ipynb  it1_scan.ipynb  it1_scan_setup.ipynb  it1_subarray_scan.ipynb  it2_mcs_teardown.ipynb  it2_scan_execution.ipynb  it3_mcs_teardown.ipynb  itaux_subarray_abort_restart.ipynb  notebook_parameters.json  notebook_params.json  notebook_params_README.md
notebooks/prototyping/helper/: __init__.py  common.py  notebook_parameters.py
notebooks/prototyping/lib/: common_notebook_package.py  common_setup.py
scripts/: check_pvc_space.sh  cleanup_artifacts.sh  clear-notebooks-data.sh  find_latest_main_tag.sh  get_talon_board_info.sh  gitlab-delete-artifacts-before-cutoff.py  redirect_visibilities_to_pvc.sh  update_qspi_remote.sh
scripts/charts/: cbf-chart-update.mk  cbf-chart.mk  get_latest_hash.sh
scripts/lint/: lint-helper.mk
scripts/log_collection/: collect_namespace_pod_logs.sh  summarize_log_levels.sh  summarize_pod_images.sh
scripts/notebooks/: clear-notebooks-data.sh
scripts/receiver/: conftest.py  test_subarray.py  visibility_receive.py
scripts/receiver/common/: __init__.py  graphql.py  kubernetes.py  wait.py
scripts/receiver/resources/: command_AssignResources.json.test  sdp-test-visibility-receive-pod.yaml  sdp-test-visibility-sender-pod.yaml  storageclass.yaml  visibility_receive.json
src/: mcs_commands.py  timeout_constants.py
src/constants/: tango_constants.py  timeout_constants.py
src/mcs_command/: __init__.py  controller_client.py  device_client.py  subarray_client.py
src/ska_mid_cbf_int_tests/cbf_command/: __init__.py  controller_client.py  deployer_client.py  device_client.py  subarray_client.py
src/ska_mid_cbf_int_tests/cbf_data/: __init__.py
src/ska_mid_cbf_int_tests/constants/: tango_constants.py  timeout_constants.py
src/ska_mid_cbf_int_tests/data/: __init__.py
src/ska_mid_cbf_int_tests/env_connect/: connect_tango_host.py
src/ska_mid_cbf_int_tests/env_management/: __init__.py  check_env_nominal_state.py  connect_tango_host.py
src/ska_mid_cbf_int_tests/mcs_command/: controller_client.py  device_client.py  subarray_client.py
src/ska_mid_cbf_int_tests/utils/: connect_tango_host.py
tests/: conftest.py  test_nominal_scan.py
tests/cbf_command_test/: conftest.py  test_subarray_client.py
tests/data/: dummy_init_sys_param.json
tests/m3/: test_nominal_scan.py
tests/subarray_client_test/: test_subarray_client.py
tests/test_lib/: test_packages.py
(+13 files in other folders)
