[tool.poetry]
name = "ska-mid-cbf-int-tests"
version = "0.0.0"
description = "Internal I&T Testing CBF command code"
authors = [
    "Rob Huxtable <robert.huxtable@mda.space>",
    "Anton Deriabine <anton.deriabine@mda.space>",
    "Elizabeth Pieters <elizabeth.pieters@mda.space>",
    "Parmis Mohaghegh <parmis.mohaghegh@mda.space>",
    "Dave Kaufman <dave.kaufman@mda.space>",
    "Brandon Dos Remedios <brandon.dosremedios@mda.space>",
]
license = "BSD License"
readme = "README.md"
packages = [
    { include = "ska_mid_cbf_int_tests", from = "src" },
]
# Include data jsons in project build for import
include = [{path = ".json"}]

[tool.poetry.dependencies]
python = "^3.10"
nbmake = "^1.4.1"
nbqa = "^1.7.0"
isort = "^5.6.4"
flake8 = "^3.9.2"
black = "^22.3.0"
jsonschema = "^4.18.4"
pytest-json-report = "^1.5.0"
pytest-cov = "^4.1.0"
pylint = "^2.17.4"
pylint-junit = "^0.3.2"
pytest-json = "^0.4.0"
pylance = "^0.5.9"
pytango = "9.5.0"
ska-tango-base = "1.0.0"
ska-tango-testing = "0.7.2"
# Ensure that ska-mid-cbf-common-test-infrastructure dependency is synced with docs
ska-mid-cbf-common-test-infrastructure = { version = "0.0.0+dev.ccaa49b63", source = "gitlab-pkg-registry-common-test-infrastructure"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx-rtd-theme = "^3.0.0"
myst-parser = "^4.0.1"
ska-tango-base = "1.0.0"
ska-tango-testing = "0.7.2"
# Ensure that ska-mid-cbf-common-test-infrastructure dependency is synced with project depedencies
ska-mid-cbf-common-test-infrastructure = { version = "0.0.0+dev.ccaa49b63", source = "gitlab-pkg-registry-common-test-infrastructure"}

[[tool.poetry.source]]
name = "gitlab-pkg-registry-common-test-infrastructure"
url = "https://gitlab.com/api/v4/projects/67564529/packages/pypi/simple"

[[tool.poetry.source]]
name = "nexus-internal"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[[tool.poetry.source]]
name = "PyPI-public"
url = "https://pypi.org/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
